tenzir/integration/data/reference/pipelines_local/test_chart_attributes/step_05.ref
error: unknown option `-x`
 --> <input>:1:46
  |
1 | from stdin read json | chart donut --value b -x e
  |                                              ^^ 
  |
  = usage: chart donut [--name <field>] [--value <field>] [--title <title>]
  = docs: https://docs.tenzir/operators/chart